--- a/RHEL8-CIS/handlers/main.yml
+++ b/RHEL8-CIS/handlers/main.yml
@@ -41,7 +41,7 @@
 
 - name: generate new grub config
   become: yes
-  command: grub2-mkconfig -o "{{ grub_cfg.stat.lnk_source }}"
+  command: grub2-mkconfig -o /etc/grub2.cfg
 
 - name: restart firewalld
   become: yes
